# Task_Manager

./: Makefile  README.md  build.sh  pyproject.toml  render.yaml  setup.cfg
.github/workflows/: pyci.yml
task_manager/: __init__.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py
task_manager/templates/: check_in.html  index.html  login.html  users.html
task_manager/templates/components/: layout.html  navigation.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/tasks/: create.html  delete.html  index — копия.html  index.html  task.html  update.html
task_manager/templates/users/: delete.html  index.html  registration.html  update.html
task_manager/users/: forms.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
